chore(projects): fix image cut off

--- a/projects/styles.css
+++ b/projects/styles.css
@@ -25,12 +25,14 @@ project {
 
 project h1 {
   font-size: 40px;
+  margin-block-start: 0;
   margin-block-end: 0;
 }
 
 project .left {
   margin: auto 0;
   padding: 20px;
+  padding-top: 0;
   max-width: 500px;
 }
 
@@ -93,11 +95,11 @@ project #icebreak-img2 {
   }
 
   project .right {
-    max-width: inherit;
+    max-height: inherit;
   }
 
   project #icebreak-img1 {
-    object-position: 0 -150px;
+    object-position: 0 -50px;
   }
 
   project .right {
